force-app/main/default/objects/Movimentacao_de_Pessoas__c/Movimentacao_de_Pessoas__c.object-meta.xml
<CustomObject>
    <label>Movimentação de Pessoas</label>
    <nameField>
        <displayFormat>MOV {00}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movimentações de Pessoas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>