force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Avalia_o_sobre_a_equipe__c.field-meta.xml
<CustomField>
    <fullName>Avalia_o_sobre_a_equipe__c</fullName>
    <inlineHelpText>Avaliação sobre a equipe e cooperação entre colegas de trabalho</inlineHelpText>
    <label>Avaliação sobre a equipe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ruim</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Bom</fullName>
            </value>
            <value>
                <fullName>Ótimo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>