force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Avalia_o_sobre_a_satisfa_o__c.field-meta.xml
<CustomField>
    <fullName>Avalia_o_sobre_a_satisfa_o__c</fullName>
    <description>Avaliação sobre o prazer/satisfação em executar as atividades</description>
    <inlineHelpText>Qual sua avaliação sobre o seu prazer/satisfação em executar suas atividades?</inlineHelpText>
    <label>Avaliação sobre a satisfação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ruim</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Bom</fullName>
            </value>
            <value>
                <fullName>Ótimo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>