force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Avaliacao_sobre_a_lideran_a__c.field-meta.xml
<CustomField>
    <fullName>Avaliacao_sobre_a_lideran_a__c</fullName>
    <inlineHelpText>Qual sua avaliação sobre a liderança?</inlineHelpText>
    <label>Avaliação sobre a liderança</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ruim</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Bom</fullName>
            </value>
            <value>
                <fullName>Ótimo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>