force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Aviso_pr_vio__c.field-meta.xml
<CustomField>
    <fullName>Aviso_pr_vio__c</fullName>
    <label>Aviso prévio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INDENIZADO</fullName>
            </value>
            <value>
                <fullName>DESCONTADO</fullName>
            </value>
            <value>
                <fullName>DISPENSA</fullName>
            </value>
            <value>
                <fullName>TRABALHADO</fullName>
                <label>Trabalhado</label>
            </value>
            <value>
                <fullName>Indenizado ou Descontado</fullName>
                <isActive>false</isActive>
                <label>Indenizado ou Descontado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>