force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cargo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Cargo__c.Vigencia__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cargo__c</referenceTo>
    <relationshipLabel>Movimentações de Pessoas</relationshipLabel>
    <relationshipName>Movimenta_es_de_Pessoas</relationshipName>
    <type>Lookup</type>
</CustomField>