force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Comentarios_colaborador__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_colaborador__c</fullName>
    <label>Comentários do colaborador</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>