force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <formula>IF(!ISNULL(Data_da_altera_o__c) , Data_da_altera_o__c,  Data_do_desligamento__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data</label>
    <type>Date</type>
</CustomField>