force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Data_de_Admiss_o__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Admiss_o__c</fullName>
    <formula>Colaborador__r.Admissao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Admissão</label>
    <type>Date</type>
</CustomField>