force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Diretor_responsavel__c.field-meta.xml
<CustomField>
    <fullName>Diretor_responsavel__c</fullName>
    <label>Diretor responsável</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daniel</fullName>
            </value>
            <value>
                <fullName>Gabriel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>