force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Indicaria_a_empresa__c.field-meta.xml
<CustomField>
    <fullName>Indicaria_a_empresa__c</fullName>
    <inlineHelpText>Indicaria esta empresa para alguém?</inlineHelpText>
    <label>Indicaria a empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>