force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Motivo1__c.field-meta.xml
<CustomField>
    <fullName>Motivo1__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Redução de Quadro</fullName>
            </value>
            <value>
                <fullName>Baixa Performance</fullName>
            </value>
            <value>
                <fullName>Problemas Pessoais</fullName>
            </value>
            <value>
                <fullName>Mau Comportamento</fullName>
            </value>
            <value>
                <fullName>Outra Oportunidade</fullName>
            </value>
            <value>
                <fullName>Outros/Mudança na Estrutura</fullName>
            </value>
            <value>
                <fullName>Mérito (há apenas mudança de salário)</fullName>
            </value>
            <value>
                <fullName>Promoção (há mudança de cargo e salário)</fullName>
            </value>
            <value>
                <fullName>Movimentação Lateral (não há mudança de salário, apenas de cargo)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>