force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Descrição do motivo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>