force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Motivo_da_saida__c.field-meta.xml
<CustomField>
    <fullName>Motivo_da_saida__c</fullName>
    <inlineHelpText>Por que está saindo?</inlineHelpText>
    <label>Motivo da saída</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>