force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Mudanca_de_contrato__c.field-meta.xml
<CustomField>
    <fullName>Mudanca_de_contrato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mudança de contrato</label>
    <type>Checkbox</type>
</CustomField>