force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Nada_Consta_Finalizado__c.field-meta.xml
<CustomField>
    <fullName>Nada_Consta_Finalizado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indica quando todos os departamentos já preencheram o Nada Consta.</inlineHelpText>
    <label>Nada Consta Finalizado</label>
    <type>Checkbox</type>
</CustomField>