force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Nada_Consta_Finaneiro__c.field-meta.xml
<CustomField>
    <fullName>Nada_Consta_Finaneiro__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marque para sinalizar que não há pendências financeiras.</inlineHelpText>
    <label>Nada Consta Dpto. Financeiro</label>
    <type>Checkbox</type>
</CustomField>