force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Nada_consta_Governo__c.field-meta.xml
<CustomField>
    <fullName>Nada_consta_Governo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marque para sinalizar que não há pendências do governo.</inlineHelpText>
    <label>Nada consta Dpto. Governo</label>
    <type>Checkbox</type>
</CustomField>