force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Nada_consta_Jur_dico__c.field-meta.xml
<CustomField>
    <fullName>Nada_consta_Jur_dico__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marque para sinalizar que não há pendências jurídicas.</inlineHelpText>
    <label>Nada consta Dpto. Jurídico</label>
    <type>Checkbox</type>
</CustomField>