force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Natureza_do_desligamento__c.field-meta.xml
<CustomField>
    <fullName>Natureza_do_desligamento__c</fullName>
    <label>Natureza do desligamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desligado pela empresa</fullName>
            </value>
            <value>
                <fullName>Pedido de demissão</fullName>
            </value>
            <value>
                <fullName>Desligamento de contrato temporário</fullName>
                <label>Desligamento contrato de experiência</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>