force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Nome_do_tipo_de_registro__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_tipo_de_registro__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do tipo de registro</label>
    <type>Text</type>
</CustomField>