force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Novo_Cargo__c.field-meta.xml
<CustomField>
    <fullName>Novo_Cargo__c</fullName>
    <label>Novo Cargo (Legado)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analista Comercial I</fullName>
            </value>
            <value>
                <fullName>Analista Comercial II</fullName>
            </value>
            <value>
                <fullName>Analista Comercial III</fullName>
            </value>
            <value>
                <fullName>Analista Contabil/Fiscal I</fullName>
            </value>
            <value>
                <fullName>Analista Contabil/Fiscal II</fullName>
            </value>
            <value>
                <fullName>Analista Contabil/Fiscal III</fullName>
            </value>
            <value>
                <fullName>Analista de Compras I</fullName>
            </value>
            <value>
                <fullName>Analista de Compras II</fullName>
            </value>
            <value>
                <fullName>Analista de Compras III</fullName>
            </value>
            <value>
                <fullName>Analista de Controladoria I</fullName>
            </value>
            <value>
                <fullName>Analista de Controladoria II</fullName>
            </value>
            <value>
                <fullName>Analista de Controladoria III</fullName>
            </value>
            <value>
                <fullName>Analista de Customer Service I</fullName>
            </value>
            <value>
                <fullName>Analista de Customer Service II</fullName>
            </value>
            <value>
                <fullName>Analista de Customer Service III</fullName>
            </value>
            <value>
                <fullName>Analista de Desenvolvimento I</fullName>
            </value>
            <value>
                <fullName>Analista de Desenvolvimento II</fullName>
            </value>
            <value>
                <fullName>Analista de Desenvolvimento III</fullName>
            </value>
            <value>
                <fullName>Analista de Dpto Pessoal I</fullName>
            </value>
            <value>
                <fullName>Analista de Dpto Pessoal II</fullName>
                <label>ANALISTA DE DPTO PESSOAL II</label>
            </value>
            <value>
                <fullName>Analista de Dpto Pessoal III</fullName>
            </value>
            <value>
                <fullName>Analista de Facilites I</fullName>
            </value>
            <value>
                <fullName>Analista de Facilites II</fullName>
            </value>
            <value>
                <fullName>Analista de Facilites III</fullName>
            </value>
            <value>
                <fullName>Analista de Licitação I</fullName>
            </value>
            <value>
                <fullName>Analista de Licitação II</fullName>
            </value>
            <value>
                <fullName>Analista de Licitação III</fullName>
            </value>
            <value>
                <fullName>Analista de Locação I</fullName>
            </value>
            <value>
                <fullName>Analista de Locação II</fullName>
            </value>
            <value>
                <fullName>Analista de Locação III</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>