force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Novo_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>Novo_CNPJ__c</fullName>
    <label>Novo CNPJ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IZU Jardim Goiás</fullName>
            </value>
            <value>
                <fullName>IZU Matriz</fullName>
            </value>
            <value>
                <fullName>IZU Cozinha Industrial</fullName>
            </value>
            <value>
                <fullName>CNPJ ME</fullName>
            </value>
            <value>
                <fullName>IZU Eldorado</fullName>
            </value>
            <value>
                <fullName>IZU Brasília</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>