force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Novo_Sal_rio__c.field-meta.xml
<CustomField>
    <fullName>Novo_Sal_rio__c</fullName>
    <label>Novo Salário</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>