force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Obser__c.field-meta.xml
<CustomField>
    <fullName>Obser__c</fullName>
    <label>Observações Juridico</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>