force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Observa_es_Governo__c.field-meta.xml
<CustomField>
    <fullName>Observa_es_Governo__c</fullName>
    <label>Observações Governo</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>