force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <label>Observações</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>