force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <formula>CASE(MONTH(Data__c),
    1, &apos;01 – Janeiro&apos;,
    2, &apos;02 – Fevereiro&apos;,
    3, &apos;03 – Março&apos;,
    4, &apos;04 – Abril&apos;,
    5, &apos;05 – Maio&apos;,
    6, &apos;06 – Junho&apos;,
    7, &apos;07 – Julho&apos;,
    8, &apos;08 – Agosto&apos;,
    9, &apos;09 – Setembro&apos;,
    10, &apos;10 – Outubro&apos;,
    11, &apos;11 – Novembro&apos;,
    12, &apos;12 – Dezembro&apos;,
    &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periodo</label>
    <type>Text</type>
</CustomField>