force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Recomenda_a_readmiss_o__c.field-meta.xml
<CustomField>
    <fullName>Recomenda_a_readmiss_o__c</fullName>
    <inlineHelpText>Recomenda que este colaborador possa voltar a fazer parte da equipe algum dia?</inlineHelpText>
    <label>Recomenda a readmissão?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>