force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Resposns_vel_pelo_checklist_do_ativo__c.field-meta.xml
<CustomField>
    <fullName>Resposns_vel_pelo_checklist_do_ativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pelo checklist do ativo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>001i00000085QYb</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Movimentações de Pessoas (Resposnsável pelo checklist do ativo)</relationshipLabel>
    <relationshipName>Movimenta_es_de_Pessoas</relationshipName>
    <type>Lookup</type>
</CustomField>