force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Resumo_Nada_Consta__c.field-meta.xml
<CustomField>
    <fullName>Resumo_Nada_Consta__c</fullName>
    <label>Observações Dev/Facilities/Log/Locação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>