force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
                <default>true</default>
                <label>Novo</label>
            </value>
            <value>
                <fullName>Aguardando aprovação</fullName>
            </value>
            <value>
                <fullName>Documentação/DP</fullName>
            </value>
            <value>
                <fullName>Conversa Deslig/Ass. Docume</fullName>
                <label>ASO Demissional</label>
            </value>
            <value>
                <fullName>Aguardando registro</fullName>
            </value>
            <value>
                <fullName>Entrevista</fullName>
            </value>
            <value>
                <fullName>Registrado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Pagamento/Financeiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>