force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Status_Entrevista_de_Desligamento__c.field-meta.xml
<CustomField>
    <fullName>Status_Entrevista_de_Desligamento__c</fullName>
    <formula>IF(
    TEXT(Indicaria_a_empresa__c) = &quot;Sim&quot;,
    &quot;Respondida&quot;,
    &quot;Não respondida&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Entrevista de Desligamento</label>
    <type>Text</type>
</CustomField>