force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/Voltaria_a_trabalhar__c.field-meta.xml
<CustomField>
    <fullName>Voltaria_a_trabalhar__c</fullName>
    <inlineHelpText>Você voltaria a trabalhar aqui em outro momento?</inlineHelpText>
    <label>Voltaria a trabalhar aqui</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>