force-app/main/default/objects/Movimentacao_de_Pessoas__c/fields/X1_item_positivo__c.field-meta.xml
<CustomField>
    <fullName>X1_item_positivo__c</fullName>
    <label>1 item positivo destacado</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>