force-app/main/default/objects/Movimentacao_de_Pessoas__c/recordTypes/Desligamento.recordType-meta.xml
<RecordType>
    <fullName>Desligamento</fullName>
    <active>true</active>
    <label>Desligamento</label>
</RecordType>