force-app/main/default/objects/Movimentacao_de_Pessoas__c/recordTypes/Mudanca_de_CNPJ.recordType-meta.xml
<RecordType>
    <fullName>Mudanca_de_CNPJ</fullName>
    <active>true</active>
    <label>Mudança de CNPJ</label>
</RecordType>