force-app/main/default/objects/Movimentacao_de_Pessoas__c/recordTypes/Promocao.recordType-meta.xml
<RecordType>
    <fullName>Promocao</fullName>
    <active>true</active>
    <label>Alteração Cargo/Salário</label>
</RecordType>