force-app/main/default/objects/Movimentacao_de_Pessoas__c/validationRules/Cargo_antigo_indisponivel.validationRule-meta.xml
<ValidationRule>
    <fullName>Cargo_antigo_indisponivel</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
NOT(ISPICKVAL(Novo_Cargo__c, &quot;&quot;))
)</errorConditionFormula>
    <errorDisplayField>Novo_Cargo__c</errorDisplayField>
    <errorMessage>Este campo não esta mais disponível. Selecione um cargo a partir do campo abaixo.</errorMessage>
</ValidationRule>