force-app/main/default/objects/Movimentacao_de_Pessoas__c/validationRules/Motivo_merito.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_merito</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Motivo1__c) == &quot;Mérito (há apenas mudança de salário)&quot; &amp;&amp; Cargo__c != NULL</errorConditionFormula>
    <errorDisplayField>Cargo__c</errorDisplayField>
    <errorMessage>Movimentações com o motivo &apos;Mérito&apos; não devem ter alteração de cargo.</errorMessage>
</ValidationRule>