force-app/main/default/objects/Movimentacao_de_Pessoas__c/validationRules/Motivo_mov_lateral.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_mov_lateral</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    TEXT(Motivo1__c) = &quot;Movimentação Lateral (não há mudança de salário, apenas de cargo)&quot;,
    OR(
        ISBLANK(Cargo__c),
        NOT(ISBLANK(Novo_Sal_rio__c))
    )
)</errorConditionFormula>
    <errorMessage>Movimentação Lateral (não há mudança de salário, apenas de cargo)</errorMessage>
</ValidationRule>