force-app/main/default/objects/Movimentacao_de_Pessoas__c/validationRules/Motivo_Promocao.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_Promocao</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Motivo1__c) == &quot;Promoção (há mudança de cargo e salário)&quot; &amp;&amp; Cargo__c == NULL</errorConditionFormula>
    <errorDisplayField>Cargo__c</errorDisplayField>
    <errorMessage>Preencha o novo cargo.</errorMessage>
</ValidationRule>