force-app/main/default/objects/Movimentacao_de_Pessoas__c/validationRules/today_desligamento.validationRule-meta.xml
<ValidationRule>
    <fullName>today_desligamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Ignorar_erros__c,
ISNEW(),
Data_do_desligamento__c &lt;  TODAY()
)</errorConditionFormula>
    <errorDisplayField>Data_do_desligamento__c</errorDisplayField>
    <errorMessage>Você não pode inserir uma data retroativa</errorMessage>
</ValidationRule>