force-app/main/default/objects/Movimentacao_de_Pessoas__c/validationRules/today_promocao.validationRule-meta.xml
<ValidationRule>
    <fullName>today_promocao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
Data_da_altera_o__c &lt;  TODAY()
)</errorConditionFormula>
    <errorDisplayField>Data_da_altera_o__c</errorDisplayField>
    <errorMessage>Você não pode inserir uma data retroativa</errorMessage>
</ValidationRule>