force-app/main/default/objects/Movimentacao_de_Pessoas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Colaborador__c</columns>
    <columns>Empresa__c</columns>
    <columns>Data__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Reprovado</value>
    </filters>
    <filters>
        <field>Data__c</field>
        <operation>greaterThan</operation>
        <value>10/1/2025</value>
    </filters>
    <label>A partir de 01/10/25</label>
</ListView>