force-app/main/default/objects/Movimentacao_de_Pessoas__c/listViews/C_pia_de_A_partir_de_01_02_24.listView-meta.xml
<ListView>
    <fullName>C_pia_de_A_partir_de_01_02_24</fullName>
    <columns>NAME</columns>
    <columns>Colaborador__c</columns>
    <columns>Empresa__c</columns>
    <columns>Data__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todas alterações de cargo/salario</label>
</ListView>