force-app/main/default/objects/Movimentacao_de_Pessoas__c/listViews/GESTCOM_A_partir_de_01_04_23.listView-meta.xml
<ListView>
    <fullName>GESTCOM_A_partir_de_01_04_23</fullName>
    <columns>NAME</columns>
    <columns>Colaborador__c</columns>
    <columns>Empresa__c</columns>
    <columns>Data__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Empresa__c</field>
        <operation>equals</operation>
        <value>IZU,CNPJ ME,IZU Eldorado</value>
    </filters>
    <label>IZU A partir de 01/01/24</label>
</ListView>