force-app/main/default/objects/Movimentacao_de_Pessoas__c/listViews/HOSPCOM.listView-meta.xml
<ListView>
    <fullName>HOSPCOM</fullName>
    <columns>NAME</columns>
    <columns>Colaborador__c</columns>
    <columns>Empresa__c</columns>
    <columns>Data__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>Empresa__c</field>
        <operation>equals</operation>
        <value>ABC,GDB,GESTCOM,HEALTH SOLUTIONS,HOSPCOM</value>
    </filters>
    <label>HOSPCOM A partir de 01/01/25</label>
</ListView>